--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,16 @@ jobs:
       - name: Build and test with Gradle
         run: ./gradlew build test
 
+      - name: Copy JAR to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          source: "build/libs/*.jar"
+          target: "/home/ubuntu"
+          debug: true
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
@@ -45,5 +55,5 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            cd /home/ubuntu/Camp_Reserve
+            cd /home/ubuntu
             ./deploy.sh
