--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Deploy to EC2
 on:
   push:
     branches: [ main, develop, feature/* ]
+#  pull_request:
+#    branches: [ develop ]
 
 jobs:
   build-and-deploy:
