--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,9 @@ local.properties
 .gradle
 build/
 
+# Allow Gradle Wrapper jar file
+!gradle/wrapper/gradle-wrapper.jar
+
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
 # since they will be recreated, and may cause churn.  Uncomment if using
