--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,6 @@ name: Deploy to EC2
 on:
   push:
     branches: [ main, develop, feature/* ]
-#  pull_request:
-#    branches: [ develop ]
 
 jobs:
   build-and-deploy:
@@ -18,8 +16,8 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@v1
+#      - name: Validate Gradle wrapper
+#        uses: gradle/wrapper-validation-action@v1
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
