--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-#      - name: Validate Gradle wrapper
-#        uses: gradle/wrapper-validation-action@v1
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
 
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
