--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to EC2
 
 on:
   push:
-    branches: [ main, develop, feature/* ]
+    branches: [ main, develop ]
 
 jobs:
   build-and-deploy:
